<resources>
    <string name="app_name">Zulip</string>

    <!-- Emoji  -->
    <string name="content_desc_add_emoji">Add emoji</string>

    <!-- Message -->
    <string name="add">Append</string>
    <string name="write">Write…</string>
    <string name="stream_text">#%s</string>
    <string name="topic_text">Topic: %s</string>
    <string name="channels">Channels</string>
    <string name="people">People</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
    <string name="in_a_meeting">In a meeting</string>
    <string name="search">Search…</string>
    <string name="online">online</string>
    <string name="offline">offline</string>
    <string name="idle">idle</string>
    <string name="subscribed">Subscribed</string>
    <string name="all_streams">All streams</string>
    <string name="arrow">arrow</string>

    <!-- Error -->
    <string name="error_message">An error has occurred</string>
    <string name="error_retry">Retry</string>
    <string name="channel_name">Channel name</string>
    <string name="channel_description">Channel description</string>
    <string name="create_channel">Create channel</string>
    <string name="channel_permissions">Channel permissions</string>
    <string name="public_permission">Public</string>
    <string name="public_permission_desc">Organisation members can join (guests must be invited by a subscriber); organisation members can view complete message history without joining</string>
    <string name="permission_private_shared_history">Private, shared history</string>
    <string name="permission_private_shared_history_desc">Must be invited by a subscriber; new subscribers can view complete message history; hidden from non-administrator users</string>
    <string name="permission_private_protected_history">Private, protected history</string>
    <string name="permission_private_protected_history_desc">Must be invited by a subscriber; new subscribers can only see messages sent after they join; hidden from non-administrator users</string>
    <string name="error_channel_name">There is already a channel with the same name</string>
</resources>