<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_emoji_bg">

    <View
        android:id="@+id/dragHandle"
        android:layout_width="@dimen/drag_handle_width"
        android:layout_height="@dimen/drag_handle_height"
        android:layout_marginTop="@dimen/margin_drag_handle"
        android:background="@drawable/drag_handle_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress"
        style="@style/SmallProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dragHandle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toTopOf="@+id/createChannelBtn"
        app:layout_constraintTop_toBottomOf="@+id/progress"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView1"
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/channel_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/channelNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="60"
            app:layout_constraintTop_toBottomOf="@+id/textView1">

            <EditText
                android:id="@+id/channelName"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="60"
                tools:ignore="LabelFor"
                tools:text="@tools:sample/lorem/random" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView2"
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/channel_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/channelNameInput" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInput2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="1024"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <EditText
                android:id="@+id/channelDesc"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="1024"
                tools:ignore="LabelFor"
                tools:text="@tools:sample/lorem/random" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            app:dividerColor="@color/emperor"
            app:layout_constraintTop_toBottomOf="@+id/textInput2" />

        <TextView
            android:id="@+id/textView3"
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/channel_permissions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <RadioGroup
            android:id="@+id/permissionGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/radioPublicPerm"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/descPermission"
            style="@style/Specification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/permissionGroup"
            tools:text="@string/public_permission_desc" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createChannelBtn"
        style="@style/BaseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/create_channel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>